@@ -4,6 +4,7 @@
 
 - added `PAUSE(is_paused)` method that can pause loading of all Total.js dependencies
 - improved some parts of code
+- improved `MIDDLEWARE(name, fn, [assign], [first])` method
 - fixed measuring dimension for `.gif` images
 - fixed `BACKUP()` method (a problem with sockets)
 - fixed potential remote code execution in `U.set()` founded by [Snyk](https://snyk.io/vuln)
